--- a/style.css
+++ b/style.css
@@ -1,31 +1,52 @@
-
 body {
-    /* background-color: #f0ecda; */
-	
+    background-color: #fff6ef;
 	margin: auto;
 	margin-top: 30px;
 	text-align: center;
 	font-size: 18px;
 	max-width: 1000px;
+	font-family: 'Oswald', sans-serif;
+}
+img {
+	width: 450px;
+	height: 350px;
+	z-index: -2; 
+	position: absolute;
+
+	opacity: 0.25; 
+}
+.background {
+	left:17%;
+}
+.background2 {
+
+	right: 17%;
+
 }
 h2, h4 {
     text-align: center;
 	margin-bottom: 10px;
 	font-weight: 400;
+	background-color: white;
 }
-h6 {
-	font-weight: 200;
+h5 {
+	font-weight: 400;
+	
 }
 p1 {
-	font-weight: 500;
+	font-weight: 400;
 }
-
+select {
+	margin-left: 2px;
+	margin-right: 2px;
+	font-weight: 400;
+}
 .board1 {
 	margin: auto;
-	background-color: #ebebe4;
+	background-color: #fffffff5;
 	display: inline-block;
 	text-align:left;
-    width: 1000px;
+    width: 850px;
     margin: 10px;
     padding: 10px;
 	box-shadow: 5px 5px 5px -5px rgba(34, 60, 80, 0.6);
@@ -33,8 +54,8 @@ p1 {
 }
 
 .k1069v, .k1079 {
-	font-size: 16px;
-	background-color: whitesmoke;
+	font-size: 18px;
+	background-color: rgb(209, 199, 177);
 	margin: auto;
     margin-top: 10px;
 	margin-bottom: 10px;
@@ -75,7 +96,7 @@ input {
 	width: 140px;
 }
 button {
-	margin-left: 460px;
+	margin-left: 560px;
 	box-shadow:inset 0px 1px 0px 0px #ffffff;
 	background:linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
 	background-color:#ffffff;
@@ -84,12 +105,12 @@ button {
 	display:inline-block;
 	cursor:pointer;
 	color:#666666;
-	font-family:Arial;
 	font-size:15px;
 	font-weight:bold;
 	padding:6px 24px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #ffffff;
+	font-family: 'Oswald', sans-serif;
 }
 button:hover {
 	background:linear-gradient(to bottom, #f6f6f6 5%, #ffffff 100%);
@@ -103,7 +124,7 @@ form {
     text-align: center;
 }
 #upload {
-    width: 350px;
+    width: 300px;
     box-shadow:inset 0px 1px 0px 0px #ffffff;
 	background:linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
 	background-color:#ffffff;
@@ -112,12 +133,12 @@ form {
 	display:inline-block;
 	cursor:pointer;
 	color:#666666;
-	font-family:Arial;
 	font-size:15px;
 	font-weight:bold;
 	padding:6px 24px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #ffffff;
+	font-family: 'Oswald', sans-serif;
 }
 #upload:hover {
 	background:linear-gradient(to bottom, #f6f6f6 5%, #ffffff 100%);
