--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ select {
 
 .k1069v, .k1079 {
 	font-size: 18px;
-	background-color: rgb(209, 199, 177);
+	background-color: rgba(209, 199, 177, 0.548);
 	margin: auto;
     margin-top: 10px;
 	margin-bottom: 10px;
